# Metadata-Conditioned_Audio_Transformers

./: .gitignore  README.md  analyze_experiments.py  ast_film_diff_train.py  ast_film_soft.py  ast_film_train.py  ast_filmpp_soft.py  ast_meta_fus_diff_train.py  ast_meta_fus_train.py  ast_tafilm_train.py  ast_train.py  ast_train_bin.py  ast_train_depr.py  experiment_runner.py  filmpp_train.py  main-ml-vars.py  main-multilabel-film.py  main-multilabel.py  main.py  main_kfold.py  main_ms.py  pyproject.toml  run_filmpp_experiments.sh  stats.py  tafilm_train.py  utils.py  visualize.py
NBs/: 00-ICBHI_EDA.ipynb  00-ICBHI_metadata_creation.ipynb  00-check-cuda-gpus.ipynb  00-debug-metrics.ipynb  01-ICBHI_preprocssing_methods.ipynb  01-test_icbhi_utils.ipynb  02-test_icbhi_dataset.ipynb  02-test_spec_augment.ipynb  03-test_icbhi_dataset.ipynb  03-test_icbhi_dataset_loaders.ipynb  04-test_icbhi_dataset_loaders.ipynb  05-test_icbhi_ast_train.ipynb  06-test_train_eval_utils.ipynb  analyze_per_domain_results.ipynb  test_ast_extension.ipynb
configs/: ast_config.yaml  ast_film_config.yaml  ast_film_diff_config.yaml  ast_film_soft_config.yaml  ast_filmpp_soft_config.yaml  ast_fus_config.yaml  ast_fus_diff_config.yaml  ast_tafilm_config.yaml  base.yaml  best_params_config.yaml  config.yaml  config_best.yaml  tafilm_config.yaml
configs/audio/: default.yaml
configs/dataset/: icbhi.yaml
configs/models/: ast.yaml  cnn6.yaml
configs/training/: base.yaml
icbhi_dataset/: icbhi_metadata.csv
ls/: metrics.py
ls/config/: loader.py
ls/data/: dataloaders.py  icbhi.py  icbhi_utils.py  (+2 more)
(+34 files in other folders)
